tests/ui/dst_field_not_last.rs
use dst_factory::make_dst_factory;

#[make_dst_factory]
struct DstFieldNotLast {
    id: str,
    data: i32,
}

fn main() {
}
